# colony_simulation

./: Cargo.toml  README.md
src/: main.rs
src/components/: camera.rs  mod.rs  scene.rs
src/components/grid/: grid_fractional_position.rs  grid_height_offset.rs  grid_position.rs  mod.rs  moving_to.rs
src/components/grid/movement/: mod.rs
src/components/object/: mod.rs  name.rs
src/components/object/creature/: mod.rs  name.rs
src/components/object/creature/movement/: destination.rs  mod.rs
src/components/object/creature/stats/: base.rs  mod.rs
src/components/object/creature/stats/atributes/: definitions.rs  mod.rs
src/components/object/creature/stats/modifiers/: definitions.rs  mod.rs
src/components/render/: surface.rs
src/plugins/: camera.rs  chunks.rs  grid.rs  mod.rs  render.rs  scene.rs
src/plugins/creature/: stats.rs
src/resources/: mod.rs
src/resources/chunks/: collision.rs  environment_cell.rs  mod.rs
src/resources/simulation_world/: mod.rs  surface.rs
src/resources/simulation_world/chunks/: compressed_layer.rs  layer.rs  mod.rs
src/resources/simulation_world/chunks/layer/: chunk_data.rs  mod.rs  rle_layer.rs
src/systems/: camera.rs  mod.rs  scene.rs
src/systems/grid/: mod.rs  movement.rs  position.rs
src/systems/object/creature/: stats.rs
src/systems/render/: mod.rs
src/utils/: math.rs  memory_size.rs  mod.rs
src/utils/test/: mod.rs  spawn_colonist.rs
