[package]
name = "colony_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bitflags = "2.9.0"
enum-map = "2.7.3"
once_cell = "1.21.3"
strum = "0.27.1"
strum_macros = "0.27.1"
	


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
